CXBOX-417. Bump spring-boot version. Remove few dependencies and other security fixes (#37)
1. org.springframework.boot/spring-boot-starter-parent moved to 3.2.5 from 3.2.4
2. removed org.apache.commons/commons-text dependency
3. removed de.odysseus.juel/* dependencies 
4. removed commons-io/commons-io dependency 
5. removed org.glassfish/javax.el dependency 
6. removed java.security.AccessController class usage
7. removed jenkins ci pipeline file (GitHub ci is used instead)
8. removed liquibase-maven-plugin dependency
9. removed com.google.auto.service/auto-service dependency
10.  bumped jacoco-maven-plugin to 0.8.11 from 0.8.14
11.  removed com.sun.xml.bind/jaxb-impl dependency
12.  removed com.sun.xml.bind/jaxb-core dependency
13.  removed maven-gpg-plugin dependency and release profile from cxbox-starter-parent (they will no loner be visible in customer projects, so confusion is reduced)
14.  fixed dependency-review-config file folder
15. removed com.google/guava dependency
16. removed  commons-collections4 dependency
17. change commons-lang3 dependency version to be managed by spring-boot. isolated this library usage with facade CxReflectionUtils to ease its re-movement in future


Result:
I)
Only 2 dependencies versions are now explicitly set in cxbox core
<!-- dependencies versions -->
<hibernate-commons-annotations.version>6.0.6.Final</hibernate-commons-annotations.version>
<javapoet.version>1.13.0</javapoet.version>

II)
All other dependencies versions are now managed by
<parent>
   <groupId>org.springframework.boot</groupId>
   <artifactId>spring-boot-starter-parent</artifactId>
   <version>3.2.5</version>
</parent>
and their versions can be overriden on project level just like in usual spring-boot app (see https://docs.spring.io/spring-pulsar/reference/appendix/override-boot-dependencies.html)
---------

Co-authored-by: cxbox <cxbox.mail@gmail.com>